Java 17 features implementations.